// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-yp8af0,
[data-css-yp8af0] {
  display: block;
  margin: auto;
  background-color: #0C98EB;
  min-height: 100vh;
  max-width: 50em;
  text-align: left;
}

<StyledContainer>
  <div
    className="css-yp8af0"
  />
</StyledContainer>
`;

exports[`enzyme.mount 2`] = `
.css-yp8af0,
[data-css-yp8af0] {
  display: block;
  margin: auto;
  background-color: #0C98EB;
  min-height: 100vh;
  max-width: 50em;
  text-align: left;
}

<StyledContainer
  size={true}
>
  <div
    className="css-yp8af0"
  />
</StyledContainer>
`;

exports[`enzyme.mount 3`] = `
.css-1jwowm9,
[data-css-1jwowm9] {
  display: block;
  margin: auto;
  background-color: #042C43;
  min-height: 100vh;
  max-width: 50em;
  text-align: left;
}

<StyledContainer
  color={true}
>
  <div
    className="css-1jwowm9"
  />
</StyledContainer>
`;

exports[`enzyme.render 1`] = `
.css-yp8af0,
[data-css-yp8af0] {
  display: block;
  margin: auto;
  background-color: #0C98EB;
  min-height: 100vh;
  max-width: 50em;
  text-align: left;
}

<div
  class="css-yp8af0"
/>
`;

exports[`enzyme.render 2`] = `
.css-yp8af0,
[data-css-yp8af0] {
  display: block;
  margin: auto;
  background-color: #0C98EB;
  min-height: 100vh;
  max-width: 50em;
  text-align: left;
}

<div
  class="css-yp8af0"
/>
`;

exports[`enzyme.render 3`] = `
.css-1jwowm9,
[data-css-1jwowm9] {
  display: block;
  margin: auto;
  background-color: #042C43;
  min-height: 100vh;
  max-width: 50em;
  text-align: left;
}

<div
  class="css-1jwowm9"
/>
`;

exports[`enzyme.shallow 1`] = `
.css-yp8af0,
[data-css-yp8af0] {
  display: block;
  margin: auto;
  background-color: #0C98EB;
  min-height: 100vh;
  max-width: 50em;
  text-align: left;
}

<div
  className="css-yp8af0"
/>
`;

exports[`enzyme.shallow 2`] = `
.css-yp8af0,
[data-css-yp8af0] {
  display: block;
  margin: auto;
  background-color: #0C98EB;
  min-height: 100vh;
  max-width: 50em;
  text-align: left;
}

<div
  className="css-yp8af0"
/>
`;

exports[`enzyme.shallow 3`] = `
.css-1jwowm9,
[data-css-1jwowm9] {
  display: block;
  margin: auto;
  background-color: #042C43;
  min-height: 100vh;
  max-width: 50em;
  text-align: left;
}

<div
  className="css-1jwowm9"
/>
`;
